2009-02-28  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-object.c:
	* pgp/seahorse-gpgme-key.c: Always have an ID on a GPGME key before
	trying to load other parts.

	* pgp/seahorse-gpgme-key.c: Don't crash when loading a key that 
	initialy only has a secret part.

2009-02-27  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager-store.c: Don't allow interactive
	search in the key tree since, the filter on the top serves 
	that purpose.
	
2009-02-27  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-gpgme-uid.c:
	* pgp/seahorse-pgp-key.c:
	* pgp/seahorse-pgp-uid.c:
	* pgp/seahorse-pgp-uid.h: Setup ids properly on UID objects. 
	
	* pgp/seahorse-pgp-key.c: 
	* pkcs11/seahorse-pkcs11-operations.c:
	* src/seahorse-key-manager.c: Fix problems highlighted by valgrind,
	using uninitialized variables, and freeing non-allocated memory.
	
	* pgp/seahorse-gpgme-key.c:
	* pgp/seahorse-pgp-key.c: Workaround for strange ownership behavior, 
	we only add GPGME keys to the context, rather than all PGP keys.
	
2009-02-27  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-context.c: Stop segfaulting when objects with NULL 
    ids are removed.

    * libcryptui/cryptui.c: gtk-doc documentation

    * libseahorse/seahorse-widget.c: Fix reference counting so destroyed
    widgets are indeed destroyed.

2009-02-25  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-object-widget.c:
    * libseahorse/seahorse-widget.c: Remove more deprecated symbols.
    Patch from Thomas Anderson.  Fixes bug #572181

2009-02-17  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Remove deprecated GTK+ symbols
    Fixes bug #572181

2009-02-17  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-keyserver-search.c:
    * gkr/seahorse-gkr-item-properties.c:
    * libseahorse/seahorse-object-widget.h: Remove deprecated GTK+ symbols
    Fixes bug #572181
