@@ -1,5 +1,10 @@
 2009-02-28  Stef Walter  <stef@memberwebs.com>
 
+	* src/seahorse-keyserver-results.c: Make results of 
+	a keyserver searched by keyid display properly. Fixes bug #568799
+	
+2009-02-28  Stef Walter  <stef@memberwebs.com>
+
 	* libseahorse/seahorse-object.c:
 	* pgp/seahorse-gpgme-key.c: Always have an ID on a GPGME key before
 	trying to load other parts.
